# concierge

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-15-concierge-foundation.md  2026-03-15-interactive-cli.md
docs/superpowers/specs/: 2026-03-15-concierge-foundation-design.md  2026-03-15-interactive-cli-design.md
src/concierge/: __init__.py  __main__.py  agent.py  cli.py
src/concierge/agents/: echo.py  restaurant.py
src/concierge/prompts/: __init__.py  coordinator.py  echo.py  restaurant.py
src/concierge/tools/: time_tool.py
tests/integration/: test_agent.py  test_restaurant.py
tests/unit/: test_agent.py  test_cli.py  test_cli_interactive.py  test_restaurant_agents.py  test_restaurant_prompts.py  test_time_tool.py
