[project]
name = "concierge"
version = "0.1.0"
description = "A personal family concierge agent built with Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk",
    "rich",
]

[project.scripts]
concierge = "concierge.__main__:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/concierge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that use the Claude Code CLI (requires Claude Code installed and authenticated)",
]
asyncio_mode = "auto"
